[gd_scene load_steps=8 format=3 uid="uid://c6hni3b7plbif"]

[ext_resource type="Script" path="res://scripts/pause_scene.gd" id="1_2aib0"]
[ext_resource type="FontFile" uid="uid://d3n5y3oecltvb" path="res://assets/fonts/rubik/Rubik-Black.ttf" id="1_57ag2"]
[ext_resource type="Material" uid="uid://bvj114mfwpn1k" path="res://assets/material/blur.tres" id="1_g4u82"]
[ext_resource type="PackedScene" uid="uid://bheakgcv4xagd" path="res://scenes/square_button.tscn" id="2_vkbkx"]

[sub_resource type="Animation" id="Animation_a8r3r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blur:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vyl2q"]
resource_name = "start_pause"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blur:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_55i3j"]
_data = {
"RESET": SubResource("Animation_a8r3r"),
"start_pause": SubResource("Animation_vyl2q")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -959.0
offset_top = -535.0
offset_right = -959.0
offset_bottom = -535.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2aib0")

[node name="Blur" type="ColorRect" parent="."]
material = ExtResource("1_g4u82")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Center" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -85.5
offset_right = 135.0
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Title" type="RichTextLabel" parent="Center"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_57ag2")
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center]PAUSE"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="RestartButton" parent="Center/HBoxContainer" instance=ExtResource("2_vkbkx")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 5
texture_file = "res://assets/gui/Button/Icon/Replay.png"

[node name="PlayButton" parent="Center/HBoxContainer" instance=ExtResource("2_vkbkx")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 5
texture_file = "res://assets/gui/Button/Icon/Play.png"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_55i3j")
}

[node name="Bottom" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="Bottom"]
layout_mode = 2
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="LevelSelectorButton" parent="Bottom/MarginContainer" instance=ExtResource("2_vkbkx")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 5
texture_file = "res://assets/gui/Button/Icon/Levels.png"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="clicked" from="Center/HBoxContainer/RestartButton" to="." method="_on_restart_button_clicked"]
[connection signal="clicked" from="Center/HBoxContainer/PlayButton" to="." method="_on_play_button_clicked"]
[connection signal="clicked" from="Bottom/MarginContainer/LevelSelectorButton" to="." method="_on_level_selector_button_clicked"]
